fix: align-items of card block

--- a/container.css
+++ b/container.css
@@ -1,4 +1,5 @@
 .container {
   display: flex;
   gap: 32px;
+  align-items: flex-end;
 }
